#4 fix colors and contrast for some texts

--- a/src/components/PeopleList/index.scss
+++ b/src/components/PeopleList/index.scss
@@ -189,6 +189,7 @@ div {
 
     &:hover p {
       color: #fff;
+      text-shadow: 0px 0px 5px grey;
     }
 
     &:hover .pic {
